--- a/action.yml
+++ b/action.yml
@@ -28,6 +28,13 @@ runs:
     - name : Install dependencies
       shell: bash
       run: uv sync
+    
+    - name: debug
+      shell: bash
+      run: |
+        pwd
+        ls -la
+        ls -la ${{ inputs.path }}
 
     - name: main
       id: detect-version
