fix: path for remote execution

--- a/action.yml
+++ b/action.yml
@@ -19,7 +19,8 @@ runs:
   steps:
     - uses: actions/setup-python@v6
       with:
-        python-version-file: "pyproject.toml"
+        python-version-file: pyproject.toml
+      working-directory: ${{ github.action_path }}
 
     - name: Install uv
       uses: astral-sh/setup-uv@v6
@@ -27,10 +28,11 @@ runs:
     - name : Install dependencies
       shell: bash
       run: uv sync
+      working-directory: ${{ github.action_path }}
 
     - name: main
       id: detect-version
       shell: bash
       run: |
-        uv run main.py --path ${{ inputs.path }} > result
+        uv run ${{ github.action_path }}/main.py --path ${{ inputs.path }} > result
         echo "terraform=$(cat result)" >> $GITHUB_OUTPUT
