--- a/action.yml
+++ b/action.yml
@@ -19,16 +19,16 @@ runs:
   steps:
     - uses: actions/setup-python@v6
       with:
-        python-version-file: pyproject.toml
-      working-directory: ${{ github.action_path }}
+        python-version-file: ${{ github.action_path }}/pyproject.toml
 
     - name: Install uv
       uses: astral-sh/setup-uv@v6
     
     - name : Install dependencies
       shell: bash
+      env:
+        UV_WORKING_DIRECTORY: ${{ github.action_path }}
       run: uv sync
-      working-directory: ${{ github.action_path }}
 
     - name: main
       id: detect-version
