--- a/action.yml
+++ b/action.yml
@@ -33,6 +33,8 @@ runs:
     - name: main
       id: detect-version
       shell: bash
+      env:
+        UV_WORKING_DIRECTORY: ${{ github.action_path }}
       run: |
-        uv run ${{ github.action_path }}/main.py --path ${{ inputs.path }} > result
+        uv run main.py --path ${{ github.workspace }}/${{ inputs.path }} > result
         echo "terraform=$(cat result)" >> $GITHUB_OUTPUT
