--- a/action.yml
+++ b/action.yml
@@ -19,7 +19,9 @@ runs:
   steps:
     - name: Install uv
       uses: astral-sh/setup-uv@v7
-    
+      with:
+        enable-cache: false
+
     - name : Install dependencies
       shell: bash
       env:
