--- a/action.yml
+++ b/action.yml
@@ -17,13 +17,11 @@ outputs:
 runs:
   using: "composite"
   steps:
-    - uses: actions/setup-python@v6
-      with:
-        python-version-file: ${{ github.action_path }}/pyproject.toml
-
     - name: Install uv
       uses: astral-sh/setup-uv@v7
-    
+      with:
+        enable-cache: false
+
     - name : Install dependencies
       shell: bash
       env:
