--- a/.github/workflows/test-action.yaml
+++ b/.github/workflows/test-action.yaml
@@ -19,7 +19,7 @@ jobs:
             expected: "1.10.5"
 
     steps:
-      - uses: actions/checkout@v5
+      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
             persist-credentials: false
 
