--- a/.github/workflows/test-py.yaml
+++ b/.github/workflows/test-py.yaml
@@ -15,14 +15,8 @@ jobs:
         with:
             persist-credentials: false
 
-      - uses: actions/setup-python@v6
-        with:
-          python-version-file: "pyproject.toml"
-
       - name: Install uv
         uses: astral-sh/setup-uv@85856786d1ce8acfbcc2f13a5f3fbd6b938f9f41 # v7.1.2
       
       - name: test
-        run: |
-          uv sync
-          uv run python -m doctest main.py -v
+        run: uv run python -m doctest main.py -v
